<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wenjian.commonskill.okhttp.OkhttpActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="simpleGet"
        android:text="@string/simple_get" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="postForm"
        android:text="@string/submit_form" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="postMultiBody"
        android:text="@string/submit_multibody" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="download"
        android:text="@string/file_download" />

  <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="intercept"
        android:text="@string/intercept_model" />


</LinearLayout>
